<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:textAlignment="center"
    tools:context=".activity.MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="755dp"
        android:layout_height="68dp"
        android:layout_marginBottom="28dp"
        android:autoText="false"
        android:background="#00BCD4"
        android:text="@string/task_master"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        tools:ignore="Deprecated,MissingConstraints,TextViewEdits"
        tools:layout_editor_absoluteX="1dp" />

    <Button
        android:id="@+id/allTasksButton"
        android:layout_width="175dp"
        android:layout_height="71dp"
        android:background="#00BCD4"
        android:shadowColor="#FFFFFF"
        android:text="@string/all_tasks"
        android:textColor="@color/white"
        android:textColorHighlight="@color/black"
        android:textColorLink="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.908"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.812"
        app:rippleColor="#FFFFFF" />

    <Button
        android:id="@+id/addTaskButton"
        android:layout_width="176dp"
        android:layout_height="72dp"
        android:background="#00BCD4"
        android:text="@string/add_new_task"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.811"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="55dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="182dp"
        android:layout_height="54dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="50dp"
        android:text="@string/my_tasks"
        android:textAlignment="center"
        android:textSize="34sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.482" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="383dp"
        android:layout_height="350dp"
        android:layout_marginStart="200dp"
        android:layout_marginTop="200dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toTopOf="@+id/addTaskButton"
        app:layout_constraintEnd_toStartOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/to_do_list"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>